# Deep_Sheild_

./: .replit  API.json  README.md  app.py  classify_image.py  image_classifier.py  model.py  model.py.py  pyproject.toml  replit.nix  requirements.txt
flagged/: log.csv
static/: ex3_lab.ipynb  ex4-actiononcorpora.ipynb  ex4_inlab2.ipynb  requirements.txt
static/images/Real/: close-up-young-handsome-bearded-shirtless-man-standing-isolated-white_171337-71977.avif
templates/: audiodrop.html  classification_result.html  contactus.html  contents.html  corousel.html  download.html  footer.html  home.html  homenav.html  imagedrop.html  index.html  login.html  nav.html  notify.html  prediction.html  signup.html  videodrop.html
